multi: add label to payments rpcs
