# lnrpc/rpc.swagger.json
@@ -5426,6 +5426,10 @@
             "$ref": "#/definitions/lnrpcFeatureBit"
           },
           "description": "Features assumed to be supported by the final node. All transitive feature\ndependencies must also be set properly. For a given feature bit pair, either\noptional or remote may be set, but not both. If this field is nil or empty,\nthe router will try to load destination features from the graph as a\nfallback."
+        },
+        "label": {
+          "type": "string",
+          "description": "An optional label to add to the payment."
         }
       }
     },
@@ -5463,6 +5467,10 @@
         "route": {
           "$ref": "#/definitions/lnrpcRoute",
           "description": "Route that should be used to attempt to complete the payment."
+        },
+        "label": {
+          "type": "string",
+          "description": "An optional label for the payment."
         }
       }
     },
